Fixed horizontal scroll for comments and solutions

--- a/client/app/styles/CommentModal.css
+++ b/client/app/styles/CommentModal.css
@@ -21,16 +21,15 @@
   margin-bottom: 15px;
   border: none;
   max-height: 300px;
-  overflow: auto;
+ width: auto;
 }
 
 .comment-display__individual-comment {
   background-color: rgb(247, 246, 246);
   margin: 10px;
-  border-radius: 20px;
+  border-radius: 40px;
   width: 95%;
   padding: 5px;
-  padding-left: 10px;
 }
 
 .solution-button-container {
